# example-kubeflow-CrossSell

./: .gitignore  Makefile  README.md  pyproject.toml  same.yaml
.github/workflows/: code-quality.yaml  testing.yml
code/: .gitignore
code/pipelines/: pipeline.py
data/test/: test.csv  train.csv
src/: download.py  metrics.py  pipeline.py  preprocessing.py  training.py  util.py
tests/: download_test.py  preprocessing_test.py
