[tool.poetry]
name = "example-kubeflow-CrossSell"
version = "0.0.0"
description = ""
authors = ["Phil Winder <phil@WinderResearch.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
kfp = "^1.4.0"

[tool.poetry.dev-dependencies]
coverage = "^5.3.1"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=30.3.0,<50",
    "wheel",
    "pytest-runner",
]